<resources>
    <string name="app_name">Chat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Main -->
    <string name="welcome_message">Bienvenido al Chat</string>
    <string name="user_name_hint">Nombre de usuario</string>
    <string name="start_chat">Chat!</string>

    <!-- Chat -->
    <string name="back">Atrás</string>
    <string name="send_message">Enviar mensaje</string>
    <string name="message_hint">Escribe un mensaje…</string>
    <string name="hour_example">12:00</string>
    <string name="date_example">9 de diciembre</string>
    <string name="example_message">This is my message</string>
    <string name="error_empty_username">El nombre de usuario no puede estar vacío</string>
</resources>