<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_view_date_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_size_32"
        android:textColor="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/date_example" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_chat_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        app:cardBackgroundColor="@color/primary_color"
        app:cardCornerRadius="@dimen/dimen_size_12"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_date_me">

        <TextView
            android:id="@+id/text_view_chat_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/dimen_size_12"
            android:paddingVertical="@dimen/dimen_size_8"
            android:textColor="@color/message_me_color"
            tools:text="@string/example_message" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_view_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_gray"
        android:textSize="@dimen/dimen_text_size_12"
        app:layout_constraintBottom_toBottomOf="@id/card_view_chat_me"
        app:layout_constraintEnd_toStartOf="@+id/card_view_chat_me"
        tools:text="@string/hour_example" />

</androidx.constraintlayout.widget.ConstraintLayout>
